feat: basic html added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Stocks</title>
 </head>
 <body>
-    
+<input type="number" id="initial-price" class="input-tab" placeholder="Initial stock price"/>
+<input type="number" id="stock-qty" class="input-tab" placeholder="Number of stocks"/>
+<input type="number" id="final-price" class="input-tab" placeholder="Present stock price"/>
+
+<button class="calc-btn">tell me</button>
+
+<div class="output-div"></div>
 </body>
 </html>
