feat: script file added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stocks</title>
 </head>
+
 <body>
 <input type="number" id="initial-price" class="input-tab" placeholder="Initial stock price"/>
 <input type="number" id="stock-qty" class="input-tab" placeholder="Number of stocks"/>
@@ -15,4 +16,5 @@
 
 <div class="output-div"></div>
 </body>
+<script src="stocks.js" type="text/javascript"></script>
 </html>
