--- a/index.html
+++ b/index.html
@@ -37,32 +37,27 @@
 
     <footer>
       <ul>
-        <li className="footerLink">
-          <a className="icon" href="https://github.com/SJTGSHIVAM">
-            <FaGithub />
-          </a>
+        <li>
+          <a href="https://github.com/Surbhi84"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
-        <li className="footerLink">
-          <a className="icon" href="https://sjtgshivam.medium.com">
-            <FaMedium />
-          </a>
+        <li>
+          <a href=""> <i class="fab fa-medium-m"></i></a>
         </li>
-        <li className="footerLink">
-          <a
-            className="icon"
-            href="https://www.linkedin.com/in/shivam-pandey-766524161"
-          >
-            <FaLinkedinIn />
-          </a>
+        <li>
+          <a href="https://www.linkedin.com/in/surbhi-kukreti-a91b0b163"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </li>
-        <li className="footerLink">
-          <a className="icon" href="https://sjtgshivam.netlify.app/">
-            <FaBriefcase />
-          </a>
+        <li>
+          <a href="https://surbhikukreti.netlify.app/"
+            ><i class="fas fa-laptop"></i
+          ></a>
         </li>
       </ul>
 
-      <div className="legacyText">© 2021 | Shivam Pandey</div>
+      <div id="legacyText">© 2021 | Surbhi Kukreti</div>
     </footer>
   </body>
   <script src="stocks.js" type="text/javascript"></script>
