chores: link added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
           ></a>
         </li>
         <li>
-          <a href=""> <i class="fab fa-medium-m"></i></a>
+          <a href="https://medium.com/@subuhikukreti">
+            <i class="fab fa-medium-m"></i
+          ></a>
         </li>
         <li>
           <a href="https://www.linkedin.com/in/surbhi-kukreti-a91b0b163"
