chores: background colors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <header><h1>Up&Down</h1></header>
     <div class="inputs">
+      <h2>Hello there! Just fill the inputs and know your profits.</h2>
       <input
         type="number"
         id="initial-price"
@@ -30,7 +31,7 @@
         placeholder="Present stock price"
       />
 
-      <button class="calc-btn">tell me</button>
+      <button class="calc-btn">Check</button>
 
       <div class="output-div"></div>
     </div>
